# nli-server

./: .env.example  Cargo.toml  LICENSE
config/terms/: en.txt  zh.txt
deploy/coturn/: README.md  turnserver.conf.example
deploy/nginx/: README.md  nli-api.conf.example
doc/: boundaries.md  client-migration.md  context.md  data-model.md  identity.md  index.md  mvp-order.md  official-api-bridge.md  open-questions.md  openapi.yaml  rest-api.md  security.md  signaling-api.md  turn-auth.md
migrations/: 202606120001_create_friend_graph.sql  202606210001_reset_official_friend_graph.sql  202606210002_restrict_friend_sources.sql
src/: config.rs  db.rs  lib.rs  main.rs  observability.rs  redis.rs  signaling.rs  state.rs
src/api/: auth.rs  error.rs  friends.rs  health.rs  instances.rs  mod.rs  presence.rs  signaling.rs  terms.rs  turn.rs
src/auth/: minecraft.rs  mod.rs
src/db/: friends.rs
src/model/: friend.rs  mod.rs  presence.rs  runtime_instance.rs  signaling.rs  token.rs
tests/: auth_verify.rs  friend_api.rs  http_health.rs  postgres_friend_store.rs  redis_store.rs  runtime_instances.rs  signaling_ws.rs  turn_api.rs
